Fix text alignment

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 }
 
 main {
+    text-align: center;
     height: 100%;
     display: flex;
     flex-direction: column;
